--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -1,3 +1,23 @@
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+   height: 100vh;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+}
+
+main {
+   width: 90%;
+   height: 90%;
+}
+
 /* Estilo para o cabeçalho */
 header {
    text-align: center;
@@ -11,7 +31,7 @@ header h1 {
 
 /* Estilo para a seção de mensagens */
 #message-container {
-   /* Estilo personalizado para a seção de mensagens */
+   height: 600px;
    margin-top: 20px;
    padding: 10px;
    background-color: #fff;
@@ -21,12 +41,10 @@ header h1 {
 
 /* Estilo para o formulário de mensagens */
 #message-form {
-   /* Estilo personalizado para o formulário de mensagens */
-   margin-top: 20px;
+   margin: 20px;
 }
 
 #message-input {
-   /* Estilo personalizado para o campo de entrada de mensagem */
    width: 100%;
    padding: 10px;
    border: 1px solid #ccc;
@@ -35,7 +53,7 @@ header h1 {
 
 /* Estilo para o botão de enviar mensagem */
 #message-form button {
-   /* Estilo personalizado para o botão de enviar mensagem */
+   margin: 10px;
    padding: 10px 20px;
    background-color: #333;
    color: #fff;
