--- a/server/public/css/login.css
+++ b/server/public/css/login.css
@@ -49,3 +49,11 @@ input[type="submit"] {
 input[type="submit"]:hover {
    background-color: #0056b3;
 }
+
+span {
+   margin-top: 30px;
+}
+
+a {
+   cursor: pointer;
+}
