--- a/server/public/css/register.css
+++ b/server/public/css/register.css
@@ -50,3 +50,11 @@ input[type="submit"] {
 input[type="submit"]:hover {
    background-color: #0056b3;
 }
+
+span {
+   margin-top: 30px;
+}
+
+a {
+   cursor: pointer;
+}
